--- a/gridtab/gridtab.css
+++ b/gridtab/gridtab.css
@@ -1,4 +1,4 @@
-/* GridTab */
+/* GridTab v2.0.0*/
 
 .gridtab,
 .gridtab>dt,
@@ -20,9 +20,6 @@
     justify-content: flex-start;
     box-sizing: border-box
 }
-.gridtab .is-disabled {
-    pointer-events: none
-}
 .gridtab * {
     box-sizing: border-box
 }
@@ -34,6 +31,71 @@
     -ms-flex-preferred-size: 100%;
     flex-basis: 100%
 }
+.gridtab>dd>.gridtab__controls {
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex
+}
+.gridtab>dd>.gridtab__controls>.gridtab__close:before,
+.gridtab>dd>.gridtab__controls>.gridtab__close:after {
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%) rotate(45deg);
+    transform: translate(-50%, -50%) rotate(45deg)
+}
+.gridtab>dd>.gridtab__controls>.gridtab__close:after {
+    -webkit-transform: translate(-50%, -50%) rotate(-45deg);
+    transform: translate(-50%, -50%) rotate(-45deg)
+}
+.gridtab>dd>.gridtab__controls>.gridtab__arrow,
+.gridtab>dd>.gridtab__controls>.gridtab__close {
+    display: block;
+    width: 25px;
+    height: 25px;
+    overflow: hidden;
+    background: #666;
+    text-indent: -999px;
+    position: relative
+}
+.gridtab>dd>.gridtab__controls>.gridtab__arrow:before,
+.gridtab>dd>.gridtab__controls>.gridtab__arrow:after,
+.gridtab>dd>.gridtab__controls>.gridtab__close:before,
+.gridtab>dd>.gridtab__controls>.gridtab__close:after {
+    position: absolute;
+    width: 3px;
+    height: 13px;
+    content: '';
+    display: block;
+    background: #FFF
+}
+.gridtab>dd>.gridtab__controls>.gridtab__arrow:before,
+.gridtab>dd>.gridtab__controls>.gridtab__arrow:after {
+    top: 50%;
+    left: 50%;
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+    -webkit-transform-origin: right;
+    transform-origin: right;
+    margin: -7px 0 0 -3px;
+    height: 10px
+}
+.gridtab>dd>.gridtab__controls>.gridtab__arrow:after {
+    margin-top: -4px;
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg)
+}
+.gridtab>dd>.gridtab__controls>.gridtab__arrow.is-disabled {
+    opacity: .25
+}
+.gridtab>dd>.gridtab__controls>.gridtab__next {
+    -webkit-transform: scale(-1);
+    transform: scale(-1);
+    -webkit-transform-origin: center;
+    transform-origin: center
+}
 .gridtab>dt {
     transition: background 1s;
     background: #f2f2f2
@@ -44,10 +106,13 @@
     left: 0;
     right: 0
 }
+.gridtab>dt.is-disabled {
+    pointer-events: none
+}
 .gridtab>dt.is-active {
     z-index: 2
 }
-.gridtab>dt img {
+.gridtab>dt>img {
     max-width: 100%;
     float: left
 }
